--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -1,5 +1,6 @@
 <header>
-  <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+  <nav
+    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container">
       <a
         class="navbar-brand"
@@ -19,8 +20,15 @@
           <li class="nav-item">
             <a
               class="nav-link text-dark"
-              href="/">
-              Home
+              [routerLink]="['/products']">
+              Products
+            </a>
+          </li>
+          <li class="nav-item">
+            <a
+              class="nav-link text-dark"
+              [routerLink]="['/cart']">
+              Cart
             </a>
           </li>
         </ul>
