--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -34,14 +34,24 @@
         </ul>
 
         <ul class="navbar-nav">
-          <li class="nav-item">
-            <a
-              class="nav-link text-dark"
-              title="Login"
-              href="#">
-              Login
-            </a>
-          </li>
+          @if (isUserAuthenticated$ | async) {
+            <li class="nav-item">
+              <a
+                class="nav-link text-dark"
+                [routerLink]="['/orders']">
+                Orders
+              </a>
+            </li>
+          } @else {
+            <li class="nav-item">
+              <button
+                class="btn btn-dark btn-sm"
+                title="Login"
+                (click)="login()">
+                Login
+            </button>
+            </li>
+          }
         </ul>
       </div>
     </div>
