feat(identity-server): add custom logout endpoint

--- a/apps/shop/src/app/app.component.html
+++ b/apps/shop/src/app/app.component.html
@@ -31,9 +31,6 @@
               Cart
             </a>
           </li>
-        </ul>
-
-        <ul class="navbar-nav">
           @if (isUserAuthenticated$ | async) {
             <li class="nav-item">
               <a
@@ -42,14 +39,27 @@
                 Orders
               </a>
             </li>
-          } @else {
+          }
+        </ul>
+
+        <ul class="navbar-nav align-items-center">
+          @if (isUserAuthenticated$ | async) {
             <li class="nav-item">
+              <button
+                class="btn btn-dark btn-sm"
+                title="Logout"
+                (click)="logout()">
+                Logout
+              </button>
+            </li>
+          } @else {
+            <li class="nav-item ">
               <button
                 class="btn btn-dark btn-sm"
                 title="Login"
                 (click)="login()">
                 Login
-            </button>
+              </button>
             </li>
           }
         </ul>
