--- a/apps/shop/src/app/products/products.component.html
+++ b/apps/shop/src/app/products/products.component.html
@@ -12,7 +12,7 @@
       <div class="row g-0">
         <div class="col-4">
           <img
-            src="https://placehold.co/200x300?text={{ product.value.id }}"
+            src="https://placehold.co/200x300?text={{ $index + 1 }}"
             class="img-fluid rounded-start" />
         </div>
         <div class="col-8">
