--- a/apps/shop/src/app/cart/cart.component.html
+++ b/apps/shop/src/app/cart/cart.component.html
@@ -10,6 +10,7 @@
       <th>#</th>
       <th>Product</th>
       <th>Quantity</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
@@ -18,6 +19,14 @@
       <th>{{ $index + 1 }}</th>
       <td>{{ position.product.name }}</td>
       <td>{{ position.quantity }}</td>
+      <td>
+        <button
+          (click)="deletePosition(position.id)"
+          type="button"
+          class="btn btn-sm btn-outline-danger">
+          Delete
+        </button>
+      </td>
     </tr>
     }
   </tbody>
