--- a/apps/shop/src/app/cart/cart.component.html
+++ b/apps/shop/src/app/cart/cart.component.html
@@ -1,34 +1,71 @@
 <h1 class="mb-3">Cart</h1>
 @if (positionsLoading()) {
-<div class="spinner-border">
-  <span class="visually-hidden">Loading...</span>
-</div>
+  <div class="spinner-border">
+    <span class="visually-hidden">Loading...</span>
+  </div>
 } @else {
-<table class="table table-hover">
-  <thead>
-    <tr>
-      <th>#</th>
-      <th>Product</th>
-      <th>Quantity</th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    @for (position of positionsWithProducts(); track position.id) {
-    <tr>
-      <th>{{ $index + 1 }}</th>
-      <td>{{ position.product.name }}</td>
-      <td>{{ position.quantity }}</td>
-      <td>
-        <button
-          (click)="deletePosition(position.id)"
-          type="button"
-          class="btn btn-sm btn-outline-danger">
-          Delete
-        </button>
-      </td>
-    </tr>
-    }
-  </tbody>
-</table>
+  <table class="table table-hover">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Product</th>
+        <th>Quantity</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      @for (position of positionsWithProducts(); track position.id) {
+        <tr>
+          <th>{{ $index + 1 }}</th>
+          <td>{{ position.product.name }}</td>
+          <td>{{ position.quantity }}</td>
+          <td class="pe-1 text-end">
+            <button
+              (click)="deletePosition(position.id)"
+              type="button"
+              class="btn btn-sm btn-outline-danger">
+              Delete
+            </button>
+          </td>
+        </tr>
+      }
+    </tbody>
+  </table>
 }
+@if (positionCount() > 0) {
+  <div class="pe-1 text-end">
+    <button
+      (click)="orderAllPositions()"
+      type="button"
+      class="btn btn-primary">
+      Order
+    </button>
+  </div>
+}
+
+<!-- Order confirmation modal -->
+<ng-template
+  #confirm
+  let-modal>
+  <div class="modal-header">
+    <h4
+      class="modal-title"
+      id="modal-basic-title">
+      Confirm
+    </h4>
+    <button
+      type="button"
+      class="btn-close"
+      aria-label="Close"
+      (click)="modal.dismiss()"></button>
+  </div>
+  <div class="modal-body">
+    <p>Do you want to order {{ positionCount() }} cart positions?</p>
+    <button
+      type="button"
+      class="btn btn-outline-dark"
+      (click)="modal.close()">
+      Confirm
+    </button>
+  </div>
+</ng-template>
